# aegis-llm-server

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MAINTAINERS  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
aegis_llm_server/: __init__.py  config.py  main.py  telemetry.py
aegis_llm_server/api/: models.py  routes.py
aegis_llm_server/backends/: __init__.py  base.py  deterministic.py  factory.py  sentence_transformers.py
docs/adr/: 0001-language-python-first.md
docs/contracts/: openai-embeddings-compatible-v1.md
docs/man/: aegis-llm-server.1
docs/perf/: embeddings-baseline-2026-02-22.md  embeddings-reliability-soak-2026-03-06.md
docs/perf/results/: deterministic-batch1.json  deterministic-batch8.json  deterministic-soak-10m-20260306.json  sentence-transformers-batch1.json  sentence-transformers-batch8.json
docs/plans/: aegis-llm-server-phased-plan.md  nap-to-aegis-llm-server-phased-plan.md
scripts/: bench_embeddings.py  soak_embeddings.py
tests/unit/: test_deterministic_backend.py  test_embeddings_api.py  test_embeddings_metrics.py  test_sentence_transformers_backend.py  test_telemetry.py
